--- a/src/main/webapp/views/logged/home.view.html
+++ b/src/main/webapp/views/logged/home.view.html
@@ -24,22 +24,23 @@
         <li data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-9253" class="collapsed component-holder"><a href="javascript:void(0);" class=""><i class="fa fa-users fa-lg"></i> <span>Gerenciamento Colaboradores/Parceiros</span> <span class="arrow"></span></a> 
           <ul class="sub-menu collapse  navbar-nav" id="menu-sub-9253"> 
             <li class="active"><a href="#/home/logged/empresa" class="component-holder" xattr-fullsize="display:inline;" style="display:inline;" data-component="crn-anchor">Empresa</a></li> 
-            <li class=""><a href="#/home/logged/user" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">User / Profissional</a></li>
-            <li><a href="#/home/logged/ramo" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Ramo</a></li>
-            <li><a href="#/home/logged/cargo" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Cargo</a></li>
+            <li class=""><a href="#/home/logged/user" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">User / Profissional</a></li> 
+            <li><a href="#/home/logged/ramo" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Ramo</a></li> 
+            <li><a href="#/home/logged/cargo" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Cargo</a></li> 
           </ul> </li> 
         <li data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-1124" class="collapsed component-holder"><a href="javascript:void(0);" class=""><i class="fa fa-users fa-lg"></i> <span>Gerenciamento Locais</span> <span class="arrow"></span></a> 
           <ul class="sub-menu collapse  navbar-nav" id="menu-sub-1124"> 
             <li class="active"><a href="#/home/logged/territorio" class="component-holder" xattr-fullsize="display:inline;" style="display:inline;" data-component="crn-anchor">Territorio</a></li> 
-            <li><a href="#/home/logged/estados" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Estados</a></li>
-            <li><a href="#/home/logged/cidades" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Cidades</a></li>
+            <li><a href="#/home/logged/estados" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Estados</a></li> 
+            <li><a href="#/home/logged/cidades" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Cidades</a></li> 
           </ul> </li> 
         <li data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-8763" class="collapsed component-holder"><a href="javascript:void(0);" class=""><i class="fa fa-users fa-lg"></i> <span>Gerenciamento Pesquisas</span> <span class="arrow"></span></a> 
           <ul class="sub-menu collapse  navbar-nav" id="menu-sub-8763"> 
             <li class=""><a href="#/home/logged/pesquisa" class="component-holder" xattr-fullsize="display:inline;" style="display:inline;" data-component="crn-anchor">Pesquisa</a></li> 
-            <li><a href="#/home/logged/pergunta" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Perguntas</a></li>
-            <li class=""><a href="#/home/logged/opcaoperguntas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Opcoes</a></li>
-          <li class="active"><a href="#/home/logged/componente" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Componente</a></li></ul> </li> 
+            <li><a href="#/home/logged/pergunta" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Perguntas</a></li> 
+            <li class=""><a href="#/home/logged/opcaoperguntas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Opcoes</a></li> 
+            <li class="active"><a href="#/home/logged/componente" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Componente</a></li>
+          <li><a href="#/home/logged/respostas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Respostas</a></li></ul> </li> 
         <li data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-4436" class="collapsed component-holder"><a href="#/home/logged/formularioPesquisa" class=""><i class="fa fa-users fa-lg"></i> <span>Pesquisa</span> </a> 
           <ul class="sub-menu collapse  navbar-nav in" id="menu-sub-4436"> 
           </ul> </li> 
