--- a/src/main/webapp/views/logged/cidades.view.html
+++ b/src/main/webapp/views/logged/cidades.view.html
@@ -77,19 +77,19 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="empresa" entity="api/rest/app/Empresa" keys="id" class="" dependent-by="{{Cidades}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-empresa">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-empresa" class="">Empresa</label>
-            <ui-select ng-model="Cidades.active.empresa" crn-datasource="empresa" class="crn-select" id="combobox-empresa" >
+            <ui-select ng-model="Cidades.active.empresa" crn-datasource="empresa" class="crn-select" id="combobox-empresa">
               <ui-select-match class="">
                 {{$select.selected.razao}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.razao}}
                 </div>
@@ -98,28 +98,22 @@
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-nomeCidade">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-nomeCidade" class="">Nome Cidade</label>
-            <input
-              type="text"
-              ng-model="Cidades.active.nomeCidade"
-              class="form-control"
-              id="textinput-nomeCidade"
-              placeholder="Nome Cidade"
-              >
+            <input type="text" ng-model="Cidades.active.nomeCidade" class="form-control" id="textinput-nomeCidade" placeholder="Nome Cidade">
           </div>
         </div>
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="user" entity="api/security/User" keys="id" class="" dependent-by="{{Cidades}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-user">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-user" class="">User</label>
-            <ui-select ng-model="Cidades.active.user" crn-datasource="user" class="crn-select" id="combobox-user" >
+            <ui-select ng-model="Cidades.active.user" crn-datasource="user" class="crn-select" id="combobox-user">
               <ui-select-match class="">
                 {{$select.selected.email}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.email}}
                 </div>
