--- a/src/main/webapp/views/logged/empresa.view.html
+++ b/src/main/webapp/views/logged/empresa.view.html
@@ -101,55 +101,43 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-textinput" id="crn-textinput-razao">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-razao" class="">Razao</label>
-            <input
-              type="text"
-              ng-model="Empresa.active.razao"
-              class="form-control"
-              id="textinput-razao"
-              placeholder="Razao"
-              >
+            <input type="text" ng-model="Empresa.active.razao" class="form-control" id="textinput-razao" placeholder="Razao">
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-qtdFuncionarios">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-qtdFuncionarios" class="">Qtd Funcionarios</label>
-            <input type="number"  ng-model="Empresa.active.qtdFuncionarios" class="form-control" id="textinput-qtdFuncionarios" placeholder="Qtd Funcionarios" >
+            <input type="number" ng-model="Empresa.active.qtdFuncionarios" class="form-control" id="textinput-qtdFuncionarios" placeholder="Qtd Funcionarios">
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-cnpj">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-cnpj" class="">Cnpj</label>
-            <input type="number"  ng-model="Empresa.active.cnpj" class="form-control" id="textinput-cnpj" placeholder="Cnpj" >
+            <input type="number" ng-model="Empresa.active.cnpj" class="form-control" id="textinput-cnpj" placeholder="Cnpj">
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-segmento">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-segmento" class="">Segmento</label>
-            <input
-              type="text"
-              ng-model="Empresa.active.segmento"
-              class="form-control"
-              id="textinput-segmento"
-              placeholder="Segmento"
-              >
+            <input type="text" ng-model="Empresa.active.segmento" class="form-control" id="textinput-segmento" placeholder="Segmento">
           </div>
         </div>
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="ramo" entity="api/rest/app/Ramo" keys="id" class="" dependent-by="{{Empresa}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-ramo">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-ramo" class="">Ramo</label>
-            <ui-select ng-model="Empresa.active.ramo" crn-datasource="ramo" class="crn-select" id="combobox-ramo" >
+            <ui-select ng-model="Empresa.active.ramo" crn-datasource="ramo" class="crn-select" id="combobox-ramo">
               <ui-select-match class="">
                 {{$select.selected.tipo}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.tipo}}
                 </div>
@@ -161,13 +149,13 @@
           <datasource name="pesquisa" entity="api/rest/app/Pesquisa" keys="id" class="" dependent-by="{{Empresa}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-pesquisa">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-pesquisa" class="">Pesquisa</label>
-            <ui-select ng-model="Empresa.active.pesquisa" crn-datasource="pesquisa" class="crn-select" id="combobox-pesquisa" >
+            <ui-select ng-model="Empresa.active.pesquisa" crn-datasource="pesquisa" class="crn-select" id="combobox-pesquisa">
               <ui-select-match class="">
                 {{$select.selected.nome_pesquisa}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.nome_pesquisa}}
                 </div>
