--- a/src/main/webapp/views/logged/estados.view.html
+++ b/src/main/webapp/views/logged/estados.view.html
@@ -69,19 +69,19 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="cidades" entity="api/rest/app/Cidades" keys="id" class="" dependent-by="{{Estados}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-cidades">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-cidades" class="">Cidades</label>
-            <ui-select ng-model="Estados.active.cidades" crn-datasource="cidades" class="crn-select" id="combobox-cidades" >
+            <ui-select ng-model="Estados.active.cidades" crn-datasource="cidades" class="crn-select" id="combobox-cidades">
               <ui-select-match class="">
                 {{$select.selected.nomeCidade}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.nomeCidade}}
                 </div>
@@ -90,15 +90,9 @@
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-nomeEstado">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-nomeEstado" class="">Nome Estado</label>
-            <input
-              type="text"
-              ng-model="Estados.active.nomeEstado"
-              class="form-control"
-              id="textinput-nomeEstado"
-              placeholder="Nome Estado"
-              >
+            <input type="text" ng-model="Estados.active.nomeEstado" class="form-control" id="textinput-nomeEstado" placeholder="Nome Estado">
           </div>
         </div>
         <!-- NtoN  -->
