--- a/src/main/webapp/views/logged/opcaoperguntas.view.html
+++ b/src/main/webapp/views/logged/opcaoperguntas.view.html
@@ -69,31 +69,25 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-textinput" id="crn-textinput-opcao">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-opcao" class="">Opcao</label>
-            <input
-              type="text"
-              ng-model="OpcaoPerguntas.active.opcao"
-              class="form-control"
-              id="textinput-opcao"
-              placeholder="Opcao"
-              >
+            <input type="text" ng-model="OpcaoPerguntas.active.opcao" class="form-control" id="textinput-opcao" placeholder="Opcao">
           </div>
         </div>
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="pergunta" entity="api/rest/app/Pergunta" keys="id" class="" dependent-by="{{OpcaoPerguntas}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-pergunta">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-pergunta" class="">Pergunta</label>
-            <ui-select ng-model="OpcaoPerguntas.active.pergunta" crn-datasource="pergunta" class="crn-select" id="combobox-pergunta" >
+            <ui-select ng-model="OpcaoPerguntas.active.pergunta" crn-datasource="pergunta" class="crn-select" id="combobox-pergunta">
               <ui-select-match class="">
                 {{$select.selected.perguntas}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.perguntas}}
                 </div>
