--- a/src/main/webapp/views/logged/ramo.view.html
+++ b/src/main/webapp/views/logged/ramo.view.html
@@ -61,18 +61,12 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-textinput" id="crn-textinput-tipo">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-tipo" class="">Tipo</label>
-            <input
-              type="text"
-              ng-model="Ramo.active.tipo"
-              class="form-control"
-              id="textinput-tipo"
-              placeholder="Tipo"
-              >
+            <input type="text" ng-model="Ramo.active.tipo" class="form-control" id="textinput-tipo" placeholder="Tipo">
           </div>
         </div>
         <!-- NtoN  -->
