--- a/src/main/webapp/views/logged/respostas.view.html
+++ b/src/main/webapp/views/logged/respostas.view.html
@@ -17,7 +17,7 @@
             <div class="">Resposta Correta</div>
           </th>
           <th class="">
-            <div class="">Id User Logado</div>
+            <div class="">Nome do User Logado</div>
           </th>
           <th class="">
             <div class="">Pergunta</div>
@@ -85,55 +85,37 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-textinput" id="crn-textinput-respostaCorreta">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-respostaCorreta" class="">Resposta Correta</label>
-            <input
-              type="text"
-              ng-model="Respostas.active.respostaCorreta"
-              class="form-control"
-              id="textinput-respostaCorreta"
-              placeholder="Resposta Correta"
-              >
+            <input type="text" ng-model="Respostas.active.respostaCorreta" class="form-control" id="textinput-respostaCorreta" placeholder="Resposta Correta">
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-idUserLogado">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-idUserLogado" class="">Id User Logado</label>
-            <input
-              type="text"
-              ng-model="Respostas.active.idUserLogado"
-              class="form-control"
-              id="textinput-idUserLogado"
-              placeholder="Id User Logado"
-              >
+            <input type="text" ng-model="Respostas.active.idUserLogado" class="form-control" id="textinput-idUserLogado" placeholder="Id User Logado">
           </div>
         </div>
         <div data-component="crn-textinput" id="crn-textinput-pergunta">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-pergunta" class="">Pergunta</label>
-            <input
-              type="text"
-              ng-model="Respostas.active.pergunta"
-              class="form-control"
-              id="textinput-pergunta"
-              placeholder="Pergunta"
-              >
+            <input type="text" ng-model="Respostas.active.pergunta" class="form-control" id="textinput-pergunta" placeholder="Pergunta">
           </div>
         </div>
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="user" entity="api/security/User" keys="id" class="" dependent-by="{{Respostas}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-user">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-user" class="">User</label>
-            <ui-select ng-model="Respostas.active.user" crn-datasource="user" class="crn-select" id="combobox-user" >
+            <ui-select ng-model="Respostas.active.user" crn-datasource="user" class="crn-select" id="combobox-user">
               <ui-select-match class="">
                 {{$select.selected.email}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.email}}
                 </div>
