--- a/src/main/webapp/views/logged/respostasopcaoperguntas.view.html
+++ b/src/main/webapp/views/logged/respostasopcaoperguntas.view.html
@@ -69,19 +69,19 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="respostas" entity="api/rest/app/Respostas" keys="id" class="" dependent-by="{{RespostasOpcaoPerguntas}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-respostas">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-respostas" class="">Respostas</label>
-            <ui-select ng-model="RespostasOpcaoPerguntas.active.respostas" crn-datasource="respostas" class="crn-select" id="combobox-respostas" >
+            <ui-select ng-model="RespostasOpcaoPerguntas.active.respostas" crn-datasource="respostas" class="crn-select" id="combobox-respostas">
               <ui-select-match class="">
                 {{$select.selected.respostaCorreta}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.respostaCorreta}}
                 </div>
@@ -93,13 +93,13 @@
           <datasource name="opcaoPerguntas" entity="api/rest/app/OpcaoPerguntas" keys="id" class="" dependent-by="{{RespostasOpcaoPerguntas}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-opcaoPerguntas">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-opcaoPerguntas" class="">OpcaoPerguntas</label>
-            <ui-select ng-model="RespostasOpcaoPerguntas.active.opcaoPerguntas" crn-datasource="opcaoPerguntas" class="crn-select" id="combobox-opcaoPerguntas" >
+            <ui-select ng-model="RespostasOpcaoPerguntas.active.opcaoPerguntas" crn-datasource="opcaoPerguntas" class="crn-select" id="combobox-opcaoPerguntas">
               <ui-select-match class="">
                 {{$select.selected.opcao}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.opcao}}
                 </div>
