--- a/src/main/webapp/views/logged/tecnologias.view.html
+++ b/src/main/webapp/views/logged/tecnologias.view.html
@@ -69,31 +69,25 @@
         <button class="btn btn-success" ng-click="datasource.post()"><i class="glyphicon glyphicon-ok"></i></button>
         <button class="btn btn-danger" ng-click="datasource.cancel()"><i class="glyphicon glyphicon-remove"></i></button>
       </div>
-      <br/>
+      <br>
       <fieldset ng-disabled="!datasource.editing &amp;&amp; !datasource.inserting">
         <div data-component="crn-textinput" id="crn-textinput-nome_tecnologia">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="textinput-nome_tecnologia" class="">Nome _tecnologia</label>
-            <input
-              type="text"
-              ng-model="Tecnologias.active.nome_tecnologia"
-              class="form-control"
-              id="textinput-nome_tecnologia"
-              placeholder="Nome _tecnologia"
-              >
+            <input type="text" ng-model="Tecnologias.active.nome_tecnologia" class="form-control" id="textinput-nome_tecnologia" placeholder="Nome _tecnologia">
           </div>
         </div>
         <div data-component="crn-datasource" class="component-holder">
           <datasource name="user" entity="api/security/User" keys="id" class="" dependent-by="{{Tecnologias}}"></datasource>
         </div>
         <div data-component="crn-combobox" id="crn-combobox-user">
-          <div class="form-group">
+          <div class="form-group col-sm-4">
             <label for="combobox-user" class="">User</label>
-            <ui-select ng-model="Tecnologias.active.user" crn-datasource="user" class="crn-select" id="combobox-user" >
+            <ui-select ng-model="Tecnologias.active.user" crn-datasource="user" class="crn-select" id="combobox-user">
               <ui-select-match class="">
                 {{$select.selected.email}}
               </ui-select-match>
-              <ui-select-choices  repeat="rowData in datasource.data | filter : $select.search" class="">
+              <ui-select-choices repeat="rowData in datasource.data | filter : $select.search" class="">
                 <div class="" data-container="true">
                   {{rowData.email}}
                 </div>
