Recurso de Scroll em tabelas

--- a/src/main/webapp/css/cronos.css
+++ b/src/main/webapp/css/cronos.css
@@ -278,3 +278,9 @@ div[data-component="crn-button"] {
 .radio label input[type="radio"]:disabled + .cr {
     opacity: .5;
 }
+
+
+.scrolll{
+ overflow:auto !important; 
+ height: 800px !important;
+}
