--- a/src/main/webapp/views/logged/respostas.view.html
+++ b/src/main/webapp/views/logged/respostas.view.html
@@ -6,8 +6,8 @@
   <button class="btn btn-primary" type="submit" onclick="" ng-click="Respostas.startInserting()" ng-hide="Respostas.inserting || Respostas.editing"><i class="fa fa-user"></i> <span class="">{{"template.crud.new" | translate}}</span></button>
 </div>
 <div class="component-holder" data-component="crn-grid" id="crn-grid-Respostas">
-  <div crn-datasource="Respostas" class="" ng-hide="Respostas.editing || Respostas.inserting">
-    <table class="table  table-bordered table-hover table-striped">
+  <div crn-datasource="Respostas" class="scrolll" ng-hide="Respostas.editing || Respostas.inserting">
+    <table class="table  table-bordered table-hover table-striped ">
       <thead>
         <tr class="table-header">
           <th class="">
