Scroll nas paginas de gerenciamento de pesquisa

--- a/src/main/webapp/views/logged/home.view.html
+++ b/src/main/webapp/views/logged/home.view.html
@@ -11,10 +11,10 @@
             <li><a class="component-holder" data-toggle="modal" data-target="#modalPassword" data-component="crn-anchor">{{"Home.view.ChangePassword" | translate}}</a></li> 
             <li ng-click="logout()"><a href="javascript:void(0);"><span class="">{{"Home.view.Logout" | translate}}</span></a></li> 
           </ul> </li> 
-        <li ng-if="session.root" data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-0" class="collapsed component-holder"> <a href="javascript:void(0);" class=""> <i class="fa fa-lg fa-gear"></i> <span class="">{{"ChooseTheme" | translate}}</span> <span class="arrow"></span> </a> 
-          <ul class="sub-menu collapse" id="menu-sub-0"> 
-            <li ng-repeat="theme in themes" ng-click="changeTheme(theme)"> <a href="javascript:void(0);" ng-class="{'bg-primary': myTheme==theme}">{{theme}} <i class="fa fa-lg fa-check pull-right" ng-if="myTheme==theme"></i></a></li> 
-          </ul> </li> 
+        <!--<li ng-if="session.root" data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-0" class="collapsed component-holder"> <a href="javascript:void(0);" class=""> <i class="fa fa-lg fa-gear"></i> <span class="">{{"ChooseTheme" | translate}}</span> <span class="arrow"></span> </a> -->
+        <!--  <ul class="sub-menu collapse" id="menu-sub-0"> -->
+        <!--    <li ng-repeat="theme in themes" ng-click="changeTheme(theme)"> <a href="javascript:void(0);" ng-class="{'bg-primary': myTheme==theme}">{{theme}} <i class="fa fa-lg fa-check pull-right" ng-if="myTheme==theme"></i></a></li> -->
+        <!--  </ul> </li> -->
         <li data-toggle="collapse" data-target="#menu-sub-1" class="collapsed component-holder" data-component="crn-sidebar-item"> <a href="#/home" class=""> <i class="fa fa-lg fa-home"></i> <span class="">{{"Home.view.Home" | translate}}</span> </a> </li> 
         <li ng-if="session.root" data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-5099" class="collapsed component-holder"> <a href="javascript:void(0);" class=""> <i class="fa fa-users fa-lg"></i> <span class="">{{"Home.view.Admin" | translate}}</span> <span class="arrow"></span> </a> 
           <ul class="sub-menu collapse" id="menu-sub-5099"> 
@@ -39,8 +39,9 @@
             <li class=""><a href="#/home/logged/pesquisa" class="component-holder" xattr-fullsize="display:inline;" style="display:inline;" data-component="crn-anchor">Pesquisa</a></li> 
             <li><a href="#/home/logged/pergunta" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Perguntas</a></li> 
             <li class=""><a href="#/home/logged/opcaoperguntas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Opcoes</a></li> 
-            <li class="active"><a href="#/home/logged/componente" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Componente</a></li>
-          <li><a href="#/home/logged/respostas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Respostas</a></li></ul> </li> 
+            <li class="active"><a href="#/home/logged/componente" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Componente</a></li> 
+            <li><a href="#/home/logged/respostas" class="component-holder" style="display:inline;" data-component="crn-anchor" xattr-fullsize="style:inline;">Respostas</a></li> 
+          </ul> </li> 
         <li data-toggle="collapse" data-component="crn-sidebar-item" data-target="#menu-sub-4436" class="collapsed component-holder"><a href="#/home/logged/formularioPesquisa" class=""><i class="fa fa-users fa-lg"></i> <span>Pesquisa</span> </a> 
           <ul class="sub-menu collapse  navbar-nav in" id="menu-sub-4436"> 
           </ul> </li> 
