--- a/src/main/webapp/views/logged/opcaoperguntas.view.html
+++ b/src/main/webapp/views/logged/opcaoperguntas.view.html
@@ -6,7 +6,7 @@
   <button class="btn btn-primary" type="submit" onclick="" ng-click="OpcaoPerguntas.startInserting()" ng-hide="OpcaoPerguntas.inserting || OpcaoPerguntas.editing"><i class="fa fa-user"></i> <span class="">{{"template.crud.new" | translate}}</span></button>
 </div>
 <div class="component-holder" data-component="crn-grid" id="crn-grid-OpcaoPerguntas">
-  <div crn-datasource="OpcaoPerguntas" class="" ng-hide="OpcaoPerguntas.editing || OpcaoPerguntas.inserting">
+  <div crn-datasource="OpcaoPerguntas" class="scrolll" ng-hide="OpcaoPerguntas.editing || OpcaoPerguntas.inserting">
     <table class="table  table-bordered table-hover table-striped">
       <thead>
         <tr class="table-header">
