--- a/src/main/webapp/views/logged/pergunta.view.html
+++ b/src/main/webapp/views/logged/pergunta.view.html
@@ -6,7 +6,7 @@
   <button class="btn btn-primary" type="submit" onclick="" ng-click="Pergunta.startInserting()" ng-hide="Pergunta.inserting || Pergunta.editing"><i class="fa fa-user"></i> <span class="">{{"template.crud.new" | translate}}</span></button> 
 </div> 
 <div class="component-holder" data-component="crn-grid" id="crn-grid-Pergunta"> 
-  <div crn-datasource="Pergunta" class="" ng-hide="Pergunta.editing || Pergunta.inserting"> 
+  <div crn-datasource="Pergunta" class="scrolll" ng-hide="Pergunta.editing || Pergunta.inserting"> 
     <table class="table  table-bordered table-hover table-striped"> 
       <thead> 
         <tr class="table-header"> 
