--- a/src/main/webapp/views/logged/pesquisa.view.html
+++ b/src/main/webapp/views/logged/pesquisa.view.html
@@ -6,7 +6,7 @@
   <button class="btn btn-primary" type="submit" onclick="" ng-click="Pesquisa.startInserting()" ng-hide="Pesquisa.inserting || Pesquisa.editing"><i class="fa fa-user"></i> <span class="">{{"template.crud.new" | translate}}</span></button>
 </div>
 <div class="component-holder" data-component="crn-grid" id="crn-grid-Pesquisa">
-  <div crn-datasource="Pesquisa" class="" ng-hide="Pesquisa.editing || Pesquisa.inserting">
+  <div crn-datasource="Pesquisa" class="scrolll" ng-hide="Pesquisa.editing || Pesquisa.inserting">
     <table class="table  table-bordered table-hover table-striped">
       <thead>
         <tr class="table-header">
