--- a/src/main/webapp/views/logged/formularioPesquisa.view.html
+++ b/src/main/webapp/views/logged/formularioPesquisa.view.html
@@ -9,7 +9,7 @@
   <datasource filter="" name="OpcaoPerguntas" entity="api/rest/app/OpcaoPerguntas" keys="id" rows-per-page="100" delete-message="Deseja remover?" class=""></datasource> 
   <datasource filter="" name="Respostas" entity="api/rest/app/Respostas" keys="id" rows-per-page="100" delete-message="Deseja remover?" class=""></datasource> 
 </div> 
-<div crn-datasource="Profissionais" > 
+<div crn-datasource="Profissionais" class="scrolll" > 
   <div crn-datasource="Pergunta" ng-model="" class="form-group"> 
     <div ng-if="rowData.pesquisa.nome_pesquisa == Profissionais.data[0].empresa.pesquisa.nome_pesquisa " ng-repeat="rowData in datasource.data" class="col-md-6" ng-model="pergunta = rowData.perguntas; pesquisa = rowData;  "> 
       <h3>{{rowData.perguntas}} </h3> 
